Fixing layout issues using flex

--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -1,3 +1,7 @@
+* {
+  margin: 0;
+  padding: 0;
+}
 body {
   font-family: 'Courier New', Courier, monospace;
 }
@@ -10,6 +14,8 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  text-align: center;
+  margin-bottom: 32px;
 }
 
 /* do not edit this footer */
@@ -23,4 +29,16 @@ img {
   align-items: center;
   justify-content: center;
   background: #eee;
+}
+
+.flex-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.flex-items {
+  width: 200px;
+  text-align: center;
+  margin: 52px;
 }
